--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "0.0.3",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
+    "fs": "0.0.1-security",
     "mongoose": "^4.11.5"
   }
 }
